# rust-lib-in-swift

./: .gitignore  Cargo.toml  Makefile  README.md
include/: module.modulemap
src/: lib.rs
