[package]
name = "munchausen-numbers"
version = "0.1.0"
edition = "2021"
authors = ["Ken Gutierrez <hello@kennethgutierrez.com>"]
description = "Example static library project built for Apple platforms"
publish = true

[lib]
name = "munchausen"
crate-type = ["staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
